# TalentGraph-AI

./: .dockerignore  .env.example  .gitignore  README.md  additions_only.tsx  apply_dark_mode.py  clean_patch.patch  docker-compose.yml  hunk.txt  package-lock.json  package.json  page_diff.patch  patch1.py  patch2.py  patch3.py  patched1.tsx  patched2.tsx  patched3.tsx  render.yaml  run_qa.py  start_dev.ps1  temp_head.tsx  temp_head_page.tsx
apps/api/: alembic.ini  e2e_test.py  pyproject.toml  seed_data.py  test_embeddings_script.py  test_embeddings_urllib.py  test_eval.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_create_tables.py
apps/api/app/: __init__.py  main.py
apps/api/app/ai/: __init__.py
apps/api/app/contracts/: __init__.py
apps/api/app/core/: feature_flags.py  logger.py  logging.py  settings.py  tracing.py
apps/api/app/db/: __init__.py  models.py  session.py
apps/api/app/domain/: __init__.py  analytics.py  candidate_twin.py  comparison.py  copilot.py  evaluation.py  explanation.py  knowledge_graph.py  ranking.py  recommendation.py  role_dna.py  vector.py
apps/api/app/events/: __init__.py  events.py
apps/api/app/graph/: __init__.py
apps/api/app/modules/: __init__.py
apps/api/app/pipelines/: __init__.py  batch_pipeline.py  candidate_pipeline.py  copilot_pipeline.py  embedding_pipeline.py  evaluation_pipeline.py  explanation_pipeline.py  graph_pipeline.py  ranking_pipeline.py  role_pipeline.py
apps/api/app/providers/: __init__.py  llm_provider.py  (+5 more)
apps/api/tests/: test_dependencies.py  test_phase1_postgres_repositories.py
(+351 files in other folders)
