[project]
name = "talentgraph-api"
version = "0.1.0"
description = "FastAPI backend for TalentGraph AI"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.0",
  "openpyxl>=3.1.0",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0"
]
ai = [
  "openai>=1.40.0",
  "langchain>=0.2.0",
  "sentence-transformers>=3.0.0",
  "chromadb>=0.5.0",
  "torch>=2.3.0",
]
postgres = [
  "psycopg[binary]>=3.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
